k8s-manifests/humangov-texas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-python-app-texas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-python-app-texas
  template:
    metadata:
      labels:
        app: humangov-python-app-texas
    spec:
      serviceAccountName: humangov-pod-execution-role
      containers:
      - name: humangov-python-app-texas
        image: bruno74t/humangov-image:latest
---

apiVersion: v1
kind: Service
metadata:
  name: humangov-python-app-service-texas
spec:
  type: LoadBalancer
  selector:
    app: humangov-python-app-texas
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-nginx-reverse-proxy-texas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-nginx-reverse-proxy-texas
  template:
    metadata:
      labels:
        app: humangov-nginx-reverse-proxy-texas
    spec:
      containers:
      - name: humangov-nginx-reverse-proxy-texas
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: humangov-nginx-config-texas-vol
          mountPath: /etc/nginx/
      volumes:
      - name: humangov-nginx-config-texas-vol
        configMap:
          name: humangov-nginx-config-texas

---

apiVersion: v1
kind: Service
metadata:
  name: humangov-nginx-service-texas
spec:
  type: LoadBalancer
  selector:
    app: humangov-nginx-reverse-proxy-texas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
