k8s-manifests/humangov-ingress-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: humangov-python-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: frontend
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:626127091134:certificate/f161f419-49e9-4f62-a88f-e359aa72b4a0
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
  labels:
    app: humangov-python-app-ingress
spec:
  ingressClassName: alb
  rules:
    - host: california.humangov-ct.click
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: humangov-nginx-service-california
              port:
                number: 80
    - host: texas.humangov-ct.click
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: humangov-nginx-service-texas
              port:
                number: 80
